--- a/src/UseFetch.css
+++ b/src/UseFetch.css
@@ -23,6 +23,11 @@
     column-gap: 1rem;
     row-gap: 1rem;
 }
+.error{
+    position: absolute;
+    top: 45%;
+    left: 45%;
+}
 .heading{
     color: white;
     background-color: black;
@@ -33,6 +38,12 @@
 img{
     width: 50%;
     border-radius: 10px;
+}
+.loading{
+    position: absolute;
+    top: 45%;
+    left: 40%;
+    text-align: center;
 }
 .price{
     font-size: 120%;
